# INSIGHT-HPC

./: pyproject.toml
configs/: config.yaml
offline/: snapshot_models.py
offline/phase1/: baseline_comparison.py  baseline_threshold.py  evaluate.py  isolation_forest.py  lstm_autoencoder.py  run_phase1.py  unified_scorer.py
offline/phase2/: attribute_alerts.py  coherence.py  profiling_and_clustering.py  run_phase2.py  segment_jobs.py  unified_scorer.py
offline/phase3/: job_context_annotator.py  physics_constraints.py  physics_models.py  run_phase3.py  unified_scorer.py
offline/phase4/: alert_plots.py  fusion_gbdt.py  ground_truth_loader.py  operator_alert.py  run_phase4.py  score_fusion.py  synthetic_ground_truth.py
offline/preprocess/: audit_raw_files.py  build_master_tables.py  convert_to_parquet.py  feature_engineering.py  run_preprocess.py
offline/utils/: gt_mask.py  phase_runner.py  synthetic_injector.py
offline/visualization/: plot_utils.py
online/: config_online.yaml  ingest.py  run_online.py  score.py
online/buffer/: rolling_store.py
online/db/: connection.py  fetch_jobs.py  fetch_metrics.py
online/episodes/: notifier.py  schema.sql  state_machine.py  writer.py
shared/configs/: config.yaml
shared/utils/: io_utils.py  maintenance.py  parsers.py  regime_utils.py  scoring.py
src/phase1/: baseline_comparison.py  baseline_threshold.py  evaluate.py  isolation_forest.py  lstm_autoencoder.py  run_phase1.py  unified_scorer.py
src/phase2/: attribute_alerts.py  coherence.py  profiling_and_clustering.py  run_phase2.py  segment_jobs.py  (+1 more)
(+295 files in other folders)
